--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eShop</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
 </head>
 
@@ -21,43 +21,9 @@
     <main>
         <div class="goods-list">
             <div class="goods-item">
-                <img class="goodImg" src="images\iPhone14.jpg" alt="">
-                <div class="goodTitle">Название товара</div>
-                <button class="goodBtnAdd"> <a href="#">Добавить</a></button>
             </div>
-
-            <div class="goods-item">
-                <img class="goodImg" src="images\iPhone14.jpg" alt="">
-                <div class="goodTitle">Название товара</div>
-                <button class="goodBtnAdd"> <a href="#">Добавить</a></button>
-            </div>
-
-            <div class="goods-item">
-                <img class="goodImg" src="images\iPhone14.jpg" alt="">
-                <div class="goodTitle">Название товара</div>
-                <button class="goodBtnAdd"> <a href="#">Добавить</a></button>
-            </div>
-
-            <div class="goods-item">
-                <img class="goodImg" src="images\iPhone14.jpg" alt="">
-                <div class="goodTitle">Название товара</div>
-                <button class="goodBtnAdd"> <a href="#">Добавить</a></button>
-            </div>
-
-            <div class="goods-item">
-                <img class="goodImg" src="images\iPhone14.jpg" alt="">
-                <div class="goodTitle">Название товара</div>
-                <button class="goodBtnAdd"> <a href="#">Добавить</a></button>
-            </div>
-
-            <div class="goods-item">
-                <img class="goodImg" src="images\iPhone14.jpg" alt="">
-                <div class="goodTitle">Название товара</div>
-                <button class="goodBtnAdd"> <a href="#">Добавить</a></button>
-            </div>
-
-        </div>
     </main>
 </body>
+
 
 </html>
